--- a/FlowerApi/.gitignore
+++ b/FlowerApi/.gitignore
@@ -93,6 +93,7 @@ StyleCopReport.xml
 *.tmp_proj
 *_wpftmp.csproj
 *.log
+*.tlog
 *.vspscc
 *.vssscc
 .builds
@@ -296,6 +297,16 @@ node_modules/
 # Visual Studio 6 auto-generated workspace file (contains which files were open etc.)
 *.vbw
 
+# Visual Studio 6 auto-generated project file (contains which files were open etc.)
+*.vbp
+# Visual Studio 6 workspace and project file (working project files containing files to include in project)
+*.dsw
+*.dsp
+# Visual Studio 6 technical files
+*.ncb
+*.aps
+
+
 # Visual Studio LightSwitch build output
 **/*.HTMLClient/GeneratedArtifacts
 **/*.DesktopClient/GeneratedArtifacts
@@ -343,6 +354,9 @@ ASALocalRun/
 # MSBuild Binary and Structured Log
 *.binlog
 
+# Visual Studio History (VSHistory) files
+.vshistory/
+
 # NVidia Nsight GPU debugger configuration file
 *.nvuser
 
@@ -364,10 +378,8 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-##
+# VS Code files for those working on multiple tools
 ## Visual studio for Mac
-##
-
 
 # globs
 Makefile.in
