--- a/FlowerApi/FlowerApi.csproj
+++ b/FlowerApi/FlowerApi.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Repositories\Interface\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\Interfaces\" />
+  </ItemGroup>
 </Project>
