Adding populate DB method

--- a/FlowerApi/FlowerApi.csproj
+++ b/FlowerApi/FlowerApi.csproj
@@ -29,9 +29,11 @@
     <None Remove="AutoMapper" />
     <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <None Remove="DTO\" />
+    <None Remove="Enum\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\Interfaces\" />
     <Folder Include="DTO\" />
+    <Folder Include="Enum\" />
   </ItemGroup>
 </Project>
