--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /FlowerApi/.vs/FlowerApi/v17/.futdcache.v1
+/FlowerApi/.vs/FlowerApi/DesignTimeBuild/.dtbcache.v2
