--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/slnx.sqlite
 /FlowerApi/.vs/FlowerApi/v17/.futdcache.v1
 /FlowerApi/.vs/FlowerApi/DesignTimeBuild/.dtbcache.v2
+/.vs/api/v17/.suo
