--- a/FlowerApi/appsettings.json
+++ b/FlowerApi/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost; port=3306; database=flowers-app; user=root; password=root; Persist Security Info=False; Connect Timeout=300"
-  }
-  "EnableLog": "true",
+  },
+  "EnableLog": "true"
 }
